@@ -52,6 +52,8 @@
 
 	Display path to the conflicting file in conflict resolution dialog.
 
+	Provide better messages on i/o errors with 'syscalls'.  Thanks to Behrooz.
+
 	Fixed redirecting stdout of background commands to /dev/null, which could
 	be unwritable descriptor.  Thanks to c02y.
 
